--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,5 +1,3 @@
-/* STYLES */
-
 :root {
     /* colors */
     --background: hsla(186, 72%, 24%, 1); 
@@ -22,6 +20,122 @@ body {
     .navbar-text {
         font-size: 22px;
     }
+}
+
+/* GO TO THE TOP BUTTON */
+.go-to-top-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: var(--background);
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 36px;
+    cursor: pointer;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s;
+  }
+  
+  .go-to-top-button:hover {
+    background-color: #0056b3;
+  }
+  
+
+/* NAVBAR */
+header {
+	display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 120px;
+    padding: 0 2rem;
+    background-color: white;
+    color: black;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+header img {
+    height: 100px;
+    width: auto;
+}
+
+nav .link {
+	margin: 0 1rem;
+	color: black;
+    font-weight: 700;
+	text-decoration: none;
+    font-size: 26px;
+}
+
+nav .active-link {
+    background-color: var(--background); 
+    padding: 0.5rem;
+    border-radius: 10px;
+    color: white;
+}
+
+header .nav-btn {
+	padding: 5px;
+	cursor: pointer;
+	background: transparent;
+	border: none;
+	outline: none;
+	color: black;
+	visibility: hidden;
+	opacity: 0;
+	font-size: 1.8rem;
+}
+
+header div,
+nav {
+	display: flex;
+	align-items: center;
+}
+
+@media only screen and (max-width: 1024px) {
+	header .nav-btn {
+		visibility: visible;
+		opacity: 1;
+	}
+
+	header nav {
+		position: fixed;
+		top: -100vh;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		gap: 1.5rem;
+		background-color: var(--background);
+		transition: 1s;
+	}
+
+	header .responsive_nav {
+		transform: translateY(100vh);
+	}
+
+	nav .nav-close-btn {
+		position: absolute;
+		top: 2rem;
+		right: 2rem;
+        color: white;
+	}
+
+	nav .link {
+		font-size: 1.5rem;
+        color: white;
+	}
 }
 
 /* HERO */
@@ -85,7 +199,7 @@ body {
     font-size: 32px;
 }
 
-.services-home .service-text {
+.services-home .service-home-text {
     font-size: 75px;
     font-weight: 700;
     text-shadow: 8px 4px 4px rgba(0, 0, 0, 0.25);
@@ -113,8 +227,8 @@ body {
         text-align: center;
     }
 
-    .services-home .services-text {
-        font-size: 40px; 
+    .services-home .services-home-text {
+        font-size: 20px; 
         text-shadow: 4px 2px 2px rgba(0, 0, 0, 0.25);
         text-align: center;
     }
